--- a/no2.html
+++ b/no2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/bubu-dudu-angry-cute.gif" alt="Valentine gift gif" class="gift" />
+        <div class="tenor-gif-embed" data-postid="15151566744203465674" data-share-method="host" data-aspect-ratio="0.956522" data-width="100%"><a href="https://tenor.com/view/bubu-dudu-angry-cute-nice-gif-15151566744203465674">Bubu Dudu Angry Cute Sticker</a>from <a href="https://tenor.com/search/bubu+dudu+angry-stickers">Bubu Dudu Angry Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>I wont let u say no. 😡</h1>
         <div class="btn">
             <a href="yes.html">Yes</a>
