--- a/no2.html
+++ b/no2.html
@@ -8,13 +8,23 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="15151566744203465674" data-share-method="host" data-aspect-ratio="0.956522" data-width="100%"><a href="https://tenor.com/view/bubu-dudu-angry-cute-nice-gif-15151566744203465674">Bubu Dudu Angry Cute Sticker</a>from <a href="https://tenor.com/search/bubu+dudu+angry-stickers">Bubu Dudu Angry Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
+        <!-- Giphy GIF (autoplay automatically) -->
+        <div class="gif_container">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeXRmbTBwaml6bGw1dDRsOWZ5cTB3ajhhOWZtamh5MTRsaDZ2eDZrYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/NtDXRCpSWAsslJ71sr/giphy.gif"
+                 alt="Cute animated illustration">
+        </div>
+
         <h1>I wont let u say no. 😡</h1>
+
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="#" id="move-random">No</a>
         </div>
+
     </div>
+
     <script src="./script.js"></script>
 </body>
+
 </html>
