--- a/no1.html
+++ b/no1.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="10402284298245091480" data-share-method="host" data-aspect-ratio="1.17453" data-width="100%"><a href="https://tenor.com/view/bubu-dudu-sseeyall-gif-10402284298245091480">Bubu Dudu Sseeyall Sticker</a>from <a href="https://tenor.com/search/bubu+dudu-stickers">Bubu Dudu Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div class="gif_container">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ2JzYnFtanF4YTh3ZmRidTNpaWMydHA4OXVpeDRkd2ZiZWVkOWd5OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5oqyfUy11JPUcBNMHo/giphy.gif" alt="Cute animated illustration" style="width: 100%;">
+        </div>
+        
         <h1>pretty pleaseee? 🥹</h1>
+        
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="no2.html">No</a>
