--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1>Will you be my girlfriend? 🌹</h1>
+        <div class="gif_container">
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2F0cnc4YXhqYnIydGNkZDNsajY2bjFmd2M0aWlxMTJ4a2l5M2luciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LXoKpEEWn5fFhb94Tx/giphy.gif" alt="Cute illustration" style="width: 100%; max-width: 400px; display: block; margin: 0 auto;">
+        </div>
+
+        <h1>Kiuuu,Will you be my Valentine? 🌹</h1>
+
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="no1.html">No</a>
