--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="8824691505375618737" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/tkthao219-bubududu-panda-gif-8824691505375618737">Tkthao219 Bubududu GIF</a>from <a href="https://tenor.com/search/tkthao219-gifs">Tkthao219 GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div class="gif_container">
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExOGxuaTNyYXVndTFjYWt0bmxvb3poMGh2Zm14aXR4YmYxaW5qNDBlYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/OvpDkvslMuDdw59me5/giphy.gif" alt="Success Celebration GIF" style="width: 100%; max-width: 400px; display: block; margin: 0 auto;">
+        </div>
+        
         <h1>yayy i love you! 😘</h1>
     </div>
 </body>
