--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExb2F0cnc4YXhqYnIydGNkZDNsajY2bjFmd2M0aWlxMTJ4a2l5M2luciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LXoKpEEWn5fFhb94Tx/giphy.gif" alt="Cute illustration" style="width: 100%; max-width: 400px; display: block; margin: 0 auto;">
         </div>
 
-        <h1>Will you be my Valentine? 🌹🌹🌹🌹🌹🌹</h1>
+        <h1>Will you be my Valentine? 🌹🌹🌹</h1>
 
         <div class="btn">
             <a href="yes.html">Yes</a>
